# NNJA-AI-MCP

./: Dockerfile  README.md  client.py  pyproject.toml  server.py  simple-client.py
mcp_client/: __main__.py  chat.py  cli.py  handlers.py  mcp_client.py
