[project]
name = "nnja-ai-mcp"
version = "0.1.0"
description = "MCP server to access NNJA-AI datasets and client to test."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp==2.12.4",
    "fuzzywuzzy>=0.18.0",
    "google-genai>=1.43.0",
    "matplotlib>=3.10.7",
    "nnja-ai>=1.0.0",
    "pyqt6>=6.9.1",
    "python-levenshtein>=0.27.3",
    "scipy>=1.16.3",
]

[project.scripts]
mcp-client = "mcp_client.__main__:cli_main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_client*"] # Only include the mcp_client in the installation
